# engine

./: .gitignore  CMakeLists.txt  README.md
apps/cli/: CMakeLists.txt  Plato_AppCLI.cpp  Plato_AppCLI.hpp  Plato_AppCLI_Main.cpp
apps/xtk/: CMakeLists.txt  Plato_XTK_Application.cpp  Plato_XTK_Local_Op_Sensitivity.cpp  XTK_Main.cpp  XTK_Main_Standalone.cpp
base/src/geometry/BamG/: BamG.cpp  (+2 more)
examples/: CMakeLists.txt
examples/Analyze_2Phys_Sym/: Analyze_2Phys_Sym.ref.exo  CMakeLists.txt  analyzeApp2.xml  plato_input_deck.i
examples/Analyze_2Phys_Sym_OC/: Analyze_2Phys_Sym_OC.ref.exo  plato_input_deck.i
examples/Analyze_2Phys_Sym_XMLG/: Analyze_2Phys_Sym_XMLG.ref.exo  plato_input_deck.i
examples/Analyze_BoltedBracket/: amgx.json  analyzeApp.xml  analyzeInput.xml  analyzeInput_expression.xml  bolted_bracket.exo  interface.xml  mpirun.source  mpirun_expression.source  platoApp.xml
examples/Analyze_CSMFit/: opt.py
examples/Analyze_CompMin2D/: plato_input_deck.i
examples/Analyze_CompMin2D_ROL_LC/: CMakeLists.txt
examples/Analyze_CompMin2D_XMLG/: plato_input_deck.i
examples/Analyze_CompMin3D/: Analyze_CompMin3D.ref.exo  plato_input_deck.i
examples/Analyze_CompMin3D_2Load/: CMakeLists.txt  ROL_output.txt.gold
examples/Analyze_CompMin3D_2Load_XMLG/: plato_input_deck.i
examples/Analyze_CompMin3D_2Loads_1Performer/: Analyze_CompMin3D_2Loads_1Performer.ref.exo  plato_input_deck.i
examples/Analyze_CompMin3D_2Loads_1Performer_OC/: Analyze_CompMin3D_2Loads_1Performer_OC.ref.exo  plato_input_deck.i
examples/Analyze_CompMin3D_2_constraints/: CMakeLists.txt  design_vol.exo  design_vol.jou  plato_input_deck.i
examples/Analyze_CompMin3D_2_constraints_XMLG/: lbracket3D.exo  plato_input_deck.i
examples/Analyze_CompMin3D_MMA/: Analyze_CompMin3D_MMA.ref.exo  plato_input_deck.i
examples/Analyze_CompMin3D_MMA_XMLG/: plato_input_deck.i
examples/Analyze_CompMin3D_MassProp/: CMakeLists.txt  bolted_bracket.jou
examples/Analyze_CompMin3D_MassProp_XMLG/: CMakeLists.txt  plato_input_deck.i
examples/Analyze_CompMin3D_MultiBlock/: Analyze_CompMin3D_MultiBlock.ref.exo  CMakeLists.txt
examples/Analyze_CompMin3D_MultiBlock_OC/: Analyze_CompMin3D_MultiBlock_OC.ref.exo  plato_input_deck.i
examples/Analyze_CompMin3D_MultiBlock_XMLG/: Analyze_CompMin3D_MultiBlock_XMLG.ref.exo  CMakeLists.txt  plato_input_deck.i
examples/Analyze_CompMin3D_Orthotropic/: CMakeLists.txt  plato_input_deck.i
examples/Analyze_CompMin3D_Orthotropic_OC/: plato_input_deck.i
examples/Analyze_CompMin3D_Orthotropic_ROL_LC/: CMakeLists.txt  plato_input_deck.i
examples/Analyze_CompMin3D_Orthotropic_XMLG/: plato_input_deck.i
examples/Analyze_CompMin3D_ROL_AL/: CMakeLists.txt
examples/Analyze_CompMin3D_ROL_AL_XMLG/: plato_input_deck.i
examples/Analyze_CompMin3D_ROL_LC/: plato_input_deck.i
examples/Analyze_CompMin3D_ROL_LC_2/: plato_input_deck.i
examples/Analyze_CompMin3D_ROL_LC_2_XMLG/: plato_input_deck.i
examples/Analyze_CompMin3D_ROL_LC_3/: CMakeLists.txt
examples/Analyze_CompMin3D_ROL_LC_4/: CMakeLists.txt
examples/Analyze_CompMin3D_Restart/: Analyze_CompMin3D_Restart.ref.exo  CMakeLists.txt  ROL_output.txt.gold  plato_input_deck.i
examples/Analyze_CompMin3D_Restart_OC/: Analyze_CompMin3D_Restart_OC.ref.exo  CMakeLists.txt
examples/Analyze_CompMin3D_Restart_XMLG/: CMakeLists.txt
examples/Analyze_CompMin3D_XMLG/: CMakeLists.txt  plato_input_deck.i
examples/Analyze_Disp_Opt/: plato_input_deck.i
examples/Analyze_Disp_Opt_ROL_LC/: CMakeLists.txt  plato_input_deck.i
examples/Analyze_DisplacementCriterion/: plato_input_deck.i
examples/Analyze_DisplacementCriterion_MMA/: CMakeLists.txt  plato_input_deck.i
examples/Analyze_DisplacementCriterion_XMLG/: plato_input_deck.i
examples/Analyze_FixedBlocks_DefaultEnforceBounds/: CMakeLists.txt
examples/Analyze_FixedBlocks_DefaultEnforceBounds_OC/: FixedBlocks.i
examples/Analyze_FixedBlocks_DefaultEnforceBounds_XMLG/: CMakeLists.txt  FixedBlocks.i
examples/Analyze_FixedBlocks_NoEnforceBounds_OC/: CMakeLists.txt  FixedBlocks.i
examples/Analyze_FixedBlocks_NoEnforceBounds_XMLG/: FixedBlocks.exo  FixedBlocks.i
examples/Analyze_GreaterThan/: plato_input_deck.i
examples/Analyze_Helmholtz3D/: plato_input_deck.i
examples/Analyze_Helmholtz3D_Projection_OC/: CMakeLists.txt
examples/Analyze_Helmholtz3D_Projection_ROL_LC/: plato_input_deck.i
examples/Analyze_Helmholtz3D_Projection_XMLG/: plato_input_deck.i
examples/Analyze_Helmholtz3D_ROL_LC/: Analyze_Helmholtz3D_ROL_LC.ref.exo  CMakeLists.txt  plato_input_deck.i
examples/Analyze_Helmholtz3D_SurfaceLengthScale/: CMakeLists.txt
examples/Analyze_Helmholtz3D_SurfaceLengthScale_SymmPlane/: Analyze_Helmholtz3D_SurfaceLengthScale_SymmPlane.exodiff_commands  CMakeLists.txt  ROL_output.txt.gold  beam.exo  plato_input_deck.i
examples/Analyze_Helmholtz3D_SurfaceLengthScale_SymmPlane_ROL_LC/: plato_input_deck.i
examples/Analyze_Helmholtz3D_SurfaceLengthScale_SymmPlane_XMLG/: plato_input_deck.i
examples/Analyze_Helmholtz3D_SurfaceLengthScale_XMLG/: plato_input_deck.i
examples/Analyze_Helmholtz3D_XMLG/: plato_input_deck.i
examples/Analyze_IS_ESP/: opt.py
examples/Analyze_LaminarFlowRe100/: Analyze_LaminarFlowRe100.ref.exo  CMakeLists.txt  pipe_flow.exo  plato_input_deck.i
examples/Analyze_LaminarFlowRe100_XMLG/: plato_input_deck.i
examples/Analyze_MPCs_FDcheck/: Analyze_MPCs_FDcheck.ref.exo  interface.xml
examples/Analyze_MPCs_Helmholtz/: Analyze_MPCs_Helmholtz.exodiff_commands  CMakeLists.txt  ROL_output.txt.gold  bolted_bracket_arm.exo  plato_input_deck.i
examples/Analyze_MPCs_Helmholtz_OC/: plato_input_deck.i
examples/Analyze_MPCs_Helmholtz_XMLG/: CMakeLists.txt  plato_input_deck.i
examples/Analyze_Mitchell2D_Simp/: CMakeLists.txt  opt.py
examples/Analyze_NaturalConvectionGr1e3/: Analyze_NaturalConvectionGr1e3.ref.exo  heat_sink.exo  plato_input_deck.i
examples/Analyze_ParallelESP/: CMakeLists.txt  plato_input_deck.i  solution.csm.gold
examples/Analyze_ParallelESP_MMA/: CMakeLists.txt  plato_input_deck.i  solution.csm.gold
regression/: CMakeLists.txt
(+917 files in other folders)
