if(ALBANY)
  if(NOT DEFINED ALBANY_BINARY)
    if(NOT DEFINED ALBANY_PATH)
      message(FATAL_ERROR "
       Albany tests are enabled, but both ALBANY_BINARY and ALBANY_PATH are not set.
       One must be defined in order to enable Albany tests.")
    endif()
    Plato_find_exe(ALBANY_BINARY AlbanyMPMD ${ALBANY_PATH})
    if(NOT DEFINED ALBANY_BINARY)
      message(FATAL_ERROR "
       AlbanyMPMD was not found in ${ALBANY_PATH}")
    endif()
    message("-- Adding Albany tests")
    message("-- Albany MPMD executable: " ${ALBANY_BINARY})
    message("-- ")
  else()
    message("-- ALBANY_BINARY variable already set")
    message(STATUS "Using ${ALBANY_BINARY}")
  endif()
endif()

if(ANALYZE)
  if(NOT DEFINED ANALYZE_BINARY)
    if(NOT DEFINED ANALYZE_PATH)
      message(FATAL_ERROR "
       Analyze tests are enabled, but both ANALYZE_BINARY and ANALYZE_PATH are not set.
       One must be defined in order to enable Analyze tests.")
    endif()
    Plato_find_exe(ANALYZE_BINARY analyze_MPMD ${ANALYZE_PATH})
    if(NOT DEFINED ANALYZE_BINARY)
      message(FATAL_ERROR "
       analyze_MPMD was not found in ${ANALYZE_PATH}")
    endif()
    message("-- Adding Analyze tests")
    message("-- Analyze MPMD executable: " ${ANALYZE_BINARY})
    message("-- ")
  else()
    message("-- ANALYZE_BINARY variable already set")
    message(STATUS "Using ${ANALYZE_BINARY}")
  endif()
endif()


IF( ANALYZE )
  IF( STK_ENABLED )
    add_subdirectory(Analyze_CompMin3D_Restart)
  ENDIF()
  add_subdirectory(Analyze_CompMin3D_2Load)
  add_subdirectory(Analyze_Helmholtz3D_SurfaceLengthScale)
  add_subdirectory(Analyze_Helmholtz3D_SurfaceLengthScale_SymmPlane)
  add_subdirectory(Analyze_MPCs_Helmholtz)
  add_subdirectory(Analyze_Thermoplasticity)
  IF ( IPOPT_ENABLED )
  add_subdirectory(Analyze_CompMin3D_MMA)
  add_subdirectory(Analyze_Thermomechanics_MMA_IPOPT)
  add_subdirectory(Analyze_CompMin3D_2_constraints)
  add_subdirectory(Analyze_CompMin3D_MassProp)
  add_subdirectory(Analyze_CompMin3D_MultiBlock)
  add_subdirectory(Analyze_DisplacementCriterion)
  add_subdirectory(Analyze_GreaterThan)
  ENDIF()
  add_subdirectory(Analyze_Tmech_Opt)
  add_subdirectory(Analyze_Tmech_PNorm_Opt)
  add_subdirectory(Analyze_Thermal_Opt)
  add_subdirectory(Analyze_VolAvgTensile)
  add_subdirectory(Analyze_2Phys_Sym)
  add_subdirectory(Analyze_LaminarFlowRe100)
  if( ESP_ENABLED )
    add_subdirectory(Analyze_ParallelESP)
    IF( ENABLE_PLATO_SERVICES AND DAKOTADRIVER )
        Plato_find_exe(NUMDIFF_COMMAND numdiff ${NUMDIFF_PATH}/bin)
        add_subdirectory(Dakota_MDPS)
        add_subdirectory(Dakota_MDPS_PE_Vol)
        add_subdirectory(Dakota_SBGO)
        IF ( SIERRA_TESTS_ENABLED )
          add_subdirectory(SierraSD_DakotaMDPS_2Block)
        ENDIF()
    ENDIF()
    IF ( SIERRA_TESTS_ENABLED )
      add_subdirectory(SierraSD_ModalMatchPartTet4)
      add_subdirectory(SierraSD_ModalMatchPartTet10)
      add_subdirectory(SierraSD_ModalMatchWholeTet4)
      add_subdirectory(SierraSD_ModalMatchWholeTet10)
    ENDIF()
  ENDIF()
  IF( ENABLE_ROL )
    add_subdirectory(Analyze_Disp_Opt_ROL_LC)
    add_subdirectory(Analyze_CompMin2D_ROL_LC)
    add_subdirectory(Analyze_CompMin3D_ROL_LC)
    add_subdirectory(Analyze_CompMin3D_ROL_LC_2)
    add_subdirectory(Analyze_CompMin3D_ROL_LC_3)
    add_subdirectory(Analyze_CompMin3D_ROL_LC_4)
    add_subdirectory(Analyze_CompMin3D_ROL_AL)
    add_subdirectory(Analyze_CompMin3D_Orthotropic_ROL_LC)
    add_subdirectory(Analyze_Helmholtz3D_ROL_LC)
    add_subdirectory(Analyze_Helmholtz3D_Projection_ROL_LC)
    add_subdirectory(Analyze_Stress_ROL_BC)
    add_subdirectory(Analyze_Stress_ROL_BC_LBracket)
    add_subdirectory(Analyze_Uncertain_Load_ROL_LC)
    add_subdirectory(Analyze_FixedBlocks_DefaultEnforceBounds)
    add_subdirectory(Analyze_FixedBlocks_NoEnforceBounds)
  ENDIF()
ENDIF()

